@@ -64,6 +64,8 @@ protected:
 	MYSQL_BIND *result_bind;
 
 	sql::mysql::util::my_shared_ptr< MySQL_DebugLogger > * logger;
+
+	bool sendLongDataBeforeParamBind();
 public:
 
 	MySQL_Prepared_Statement(MYSQL_STMT *s, sql::Connection * conn, sql::mysql::util::my_shared_ptr< MySQL_DebugLogger > * log);
@@ -106,7 +108,7 @@ public:
 
 	const SQLWarning * getWarnings();/* should return differen type */
 
-	void setBlob(unsigned int parameterIndex, sql::Blob & blob);
+	void setBlob(unsigned int parameterIndex, sql::Blob * blob);
 
 	void setBoolean(unsigned int parameterIndex, bool value);
 
